# rust-practice-programs

apigateway-rs/: Cargo.toml  Readme.norg  consul-client-config.hcl  consul-server-config.hcl  consul-server-config.json  docker-compose.yaml  envoy-config.yaml  grafana.ini  infra.excalidraw  prometheus.yml  redis.conf  vpc .excalidraw
apigateway-rs/als-grpc-service/: Cargo.toml  build.rs
apigateway-rs/als-grpc-service/src/: log_service.rs  main.rs
apigateway-rs/als-grpc-service/src/envoy/: config.rs  data.rs  mod.rs  service.rs  type.rs
apigateway-rs/apis/: Cargo.toml
apigateway-rs/rls-grpc-service/: Cargo.toml  build.rs
apigateway-rs/rls-grpc-service/protos/grpc/health/v1/: health.proto
apigateway-rs/rls-grpc-service/src/: main.rs  test.rs  throttler.rs
apigateway-rs/rls-grpc-service/src/envoy/: mod.rs
apigateway-rs/rls-grpc-service/src/envoy/extensions/: mod.rs
apigateway-rs/rls-grpc-service/src/envoy/service/: mod.rs
apigateway-rs/rls-grpc-service/src/envoy/type/: mod.rs
apigateway-rs/rls-grpc-service/src/grpc/: mod.rs
apigateway-rs/rls-grpc-service/src/udpa/: mod.rs
apigateway-rs/rls-grpc-service/src/xds/: annotations.rs  core.rs  mod.rs
asyn-await-practice/: Cargo.toml
axum-practice/: Cargo.toml  docker-compose.yml
axum-practice/src/: main.rs
axum-practice/src/dto/: mod.rs
dyn-dispatch-practice/: Cargo.toml
hello-ffi/: Cargo.toml  a.out  main.c
thread-local-practice/: Cargo.toml
tokio-practice/: Cargo.toml  random.txt
tonic-practice/: Cargo.toml  build.rs
tracing-practice/: Cargo.toml
workspace-practice/: Cargo.toml
(+28 files in other folders)
