[package]
name = "axum-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
axum-macros = "0.3.4"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.23.0", features = ["full"]}
