[package]
name = "als-grpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.2"
tokio = {version = "1.29.1", features = ["full"]}
prost-types = "0.11.9"
tokio-stream = "0.1.14"
prometheus-client = "0.21.2"
axum = "0.6.19"

[build-dependencies]
tonic-build = "0.9.2"
